Initial Python 3 compatibility commit
Currently broken:
* zip handler
* mbox handler

Invoke with python3 main

--- a/conf/pygopherd.conf
+++ b/conf/pygopherd.conf
@@ -132,21 +132,19 @@ mimetypes = ./conf/mime.types:/etc/pygopherd/mime.types:/etc/mime.types
 #
 # For ease of use in the config file, we specify this as a list of
 # tuples.  You can convert any hash to a list of tuples by using .items()
-
-# encoding = mimetypes.encodings_map.items()
-
+#
+encoding = {'.Z': 'compress', '.gz': 'gzip', '.bz2': 'bzip2'}.items()
+#
 # You can override the default entirely (ie, to remove those) like this:
-
 # encoding = {'.bz2' : 'bzip2', '.gz' : 'gzip'}.items()
-# Or the same thing:
-# encoding = [('.bz2', 'bzip2'), ('.gz', 'gzip')]
-
+#
+# XXX completely broken, thanks py3k
 # Or, you can extend the default like so:
-
-encoding = mimetypes.encodings_map.items() + \
-          {'.bz2' : 'bzip2',
-           '.tal': 'tal.TALFileHandler'
-          }.items()
+#encoding = mimetypes.encodings_map.copy()
+#encoding.update( \
+#          {'.bz2' : 'bzip2',
+#           '.tal': 'tal.TALFileHandler'
+#          })
 
 ######################################################################
 # Logging
@@ -270,9 +268,9 @@ eaexts = {'.abstract' : 'ABSTRACT',
 #
 
 handlers = [url.HTMLURLHandler, gophermap.BuckGophermapHandler,
-            mbox.MaildirFolderHandler, mbox.MaildirMessageHandler,
+           #mbox.MaildirFolderHandler, mbox.MaildirMessageHandler,
             UMN.UMNDirHandler, html.HTMLFileTitleHandler,
-            mbox.MBoxMessageHandler, mbox.MBoxFolderHandler,
+           #mbox.MBoxMessageHandler, mbox.MBoxFolderHandler,
             file.FileHandler]
 
 # For full Pygopherd featureset including scripts and PYG.  Same as
@@ -391,7 +389,7 @@ cachefile = .cache.pygopherd.dir
 extstrip = nonencoded
 # extstrip = full
 
-[handlers.ZIP.ZIPHandler]
+#[handlers.ZIP.ZIPHandler]
 ##################################################
 # ZIP file handler
 ##################################################
@@ -399,9 +397,9 @@ extstrip = nonencoded
 # Even if it's listed in the available handlers, it's disabled here by
 # default.
 
-enabled = false
+#enabled = false
 
-pattern = \.zip$
+#pattern = \.zip$
 
 ######################################################################
 # PROTOCOLS
